# jsoncpp-for-Android

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/am/project/jsoncpp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/am/project/jsoncpp/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/am/project/jsoncpp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libJsoncpp/: build.gradle
libJsoncpp/src/androidTest/java/com/example/libjsoncpp/: ExampleInstrumentedTest.java
libJsoncpp/src/main/cpp/: CMakeLists.txt
libJsoncpp/src/main/cpp/jsoncpp/: libjsoncpp.cpp
libJsoncpp/src/main/java/com/example/libjsoncpp/: NativeLib.java
libJsoncpp/src/test/java/com/example/libjsoncpp/: ExampleUnitTest.java
